<resources>
    <string name="app_name">GitAndroidSchool</string>
    <string name="activity_first_text_fishtext">Shiner dottyback, loweye catfish, squarehead catfish sprat silver dollar whitetip reef shark riffle dace. Skate, "emperor angelfish Redfin perch black bass mako shark Death Valley pupfish," tuna armorhead catfish. Atlantic trout halosaur cusk-eel pencilfish bichir, pike characid hamlet ghoul.
        \nJewfish white croaker cow shark goatfish roosterfish flagfish gray reef shark southern grayling. Celebes rainbowfish mudskipper European chub gudgeon seahorse Rasbora sand eel yellowtail horse mackerel. Shovelnose sturgeon Asian carps longnose sucker convict blenny Sundaland noodlefish halibut zander bonefish Devario sandbar shark. Peacock flounder moonfish, "slimy sculpin saber-toothed blenny grunt sculpin." Southern sandfish slickhead bluefish Pacific herring lungfish silver driftfish, "white croaker eeltail catfish, bigeye." Clownfish, white shark, yellowmargin triggerfish Australian grayling grunt trumpeter; Bengal danio searobin deep sea eel. Footballfish vimba mackerel shark mrigal yellowfin tuna grideye flying characin electric stargazer french angelfish; southern hake.
        \nSnubnose eel clingfish slimy sculpin crappie pikeblenny longfin smelt Indian mul squawfish pearlfish. Olive flounder Celebes rainbowfish mud minnow riffle dace Long-finned sand diver beluga sturgeon? Eel-goby, "capelin herring smelt, medaka requiem shark seahorse yellow perch Pacific salmon saber-toothed blenny, butterflyfish stingfish!" Bala shark thorny catfish combtail gourami airsac catfish sand eel.</string>
    <string name="activity_first_button_to_second_screen">Прочитал и понял, дальше</string>
    <string name="activity_second_fragment_login_button_sign_in">Sign in or register</string>
    <string name="activity_second_fragment_login_edittext_hint_email">E-mail</string>
    <string name="activity_second_fragment_login_edittext_hint_password">Password</string>
    <string name="activity_second_fragment_posts_text_logo_omstu">OmSTU logo</string>
    <string name="activity_second_fragment_posts_text_topic">ОмГТУ</string>
    <string name="activity_second_fragment_posts_text_tools">Этот текст просто будет здесь для наглядности…</string>
    <string name="activity_second_fragment_posts_text_show_all">Показать полностью…</string>
    <string name="activity_second_fragment_posts_text_hide_part">Скрыть</string>
    <string name="activity_second_fragment_login_error_empty">Can not be empty</string>
    <string name="activity_second_fragment_login_error_min_char">Minimum 8 characters</string>
</resources>
