<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginFragment">

    <LinearLayout
        android:id="@+id/activity_second_fragment_login_container_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/activity_second_fragment_login_edittext_login"
            style="@style/editTextStyle"
            android:hint="@string/activity_second_fragment_login_edittext_hint_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/activity_second_fragment_login_edittext_password"
            style="@style/editTextStyle"
            android:hint="@string/activity_second_fragment_login_edittext_hint_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/activity_second_fragment_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorLightPink"
            android:fontFamily="sans-serif-black"
            android:text="@string/activity_second_fragment_login_button_sign_in"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_second_fragment_login_container_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/activity_second_fragment_login_progressBar"
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
