<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/post_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorWhite"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/activity_second_fragment_posts_image_first"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/activity_second_fragment_posts_text_logo_omstu"
                android:src="@drawable/omstu_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_second_fragment_posts_topic_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/activity_second_fragment_posts_text_topic"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/activity_second_fragment_posts_image_first"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_second_fragment_posts_note_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/activity_first_text_fishtext"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/activity_second_fragment_posts_topic_first"
                tools:layout_editor_absoluteX="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorWhite"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_first">

            <ImageView
                android:id="@+id/activity_second_fragment_posts_image_second"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:contentDescription="@string/activity_second_fragment_posts_text_logo_omstu"
                android:src="@drawable/omstu_logo"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_second_fragment_posts_topic_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/activity_second_fragment_posts_text_topic"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/activity_second_fragment_posts_image_second"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_second_fragment_posts_note_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/activity_first_text_fishtext"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/activity_second_fragment_posts_topic_second"
                tools:layout_editor_absoluteX="4dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
